# GithubIssueTool

./: README.md  pyproject.toml  requirements.txt  test_projects_live.py
config/: assignees.yaml  hierarchy.yaml  labels.yaml  milestones.yaml  repo.yaml  types.yaml
examples/: sample_issues.json
schemas/: issues_schema.json
skill/: github_issues.md
src/: __init__.py  cli.py  config_cache.py  config_loader.py  gather.py  gh_executor.py  mcp_server.py  models.py  skill_generator.py  validator.py
tests/: test_config_loader.py  test_gather.py  test_gh_executor.py  test_skill_generator.py  test_validator.py
