[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-issue-tool"
version = "0.1.0"
description = "AI-powered GitHub issue creation tool with configurable hierarchies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Michael Tomlinson"}
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "rich>=13.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ghissue = "src.cli:main"
mcp-server = "src.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
